tests/parse-fail/vec_no_size.fl
pub mod vec_no_size {
    pub struct VecNoSize {
        pub v : [int .. ];
    }
}
